# kochanek-bartels-spline-gui

./: .gitignore  CMakeLists.txt  README.md
ext/nanogui/: .gitignore
ext/nanogui/ext/glad/include/glad/: glad.h
ext/nanogui/ext/glad/src/: glad.c
ext/nanogui/src/: screen.cpp
include/: bevgrafmath2017.h
src/: main.cpp
